# gitcommit-ai

./: .env.example  CLAUDE.md  README.md  pyproject.toml  test-openrouter.md
.claude/: settings.local.json
.github/workflows/: test.yml
specs/002-replace-openai-anthropic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-replace-openai-anthropic/contracts/: openrouter-api.yaml
src/gitcommit_ai/action/: runner.py  scorer.py  validator.py
src/gitcommit_ai/cli/: main.py  picker.py
src/gitcommit_ai/core/: config.py  git.py
src/gitcommit_ai/generator/: multi_generator.py
src/gitcommit_ai/prompts/templates/: openrouter.txt
src/gitcommit_ai/providers/: anthropic.py  cohere.py  deepseek.py  gemini.py  mistral.py  ollama.py  openai.py  openrouter.py  registry.py
src/gitcommit_ai/stats/: aggregator.py  database.py
tests/: conftest.py
tests/e2e/: test_real_providers.py
tests/helpers/: ollama_mock.py
tests/integration/: test_cli_e2e.py  test_git_integration.py
tests/unit/: test_action_runner.py  test_cli.py  test_cli_validate_pr.py  test_config.py  test_deepseek.py  test_diff_parser.py  test_exporter.py  test_generator.py  test_git.py  test_gitmoji_mapper.py  test_hook_manager.py  test_models.py  test_multi_generator.py  test_ollama.py  test_openrouter.py  test_picker.py  test_prompt_loader.py  test_registry.py  test_scorer.py  test_validator.py
